1. Метод .of [#70623 #286509]